# swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "version": "1.0.1",
+    "version": "1.0.3",
     "title": "Goose Track",
     "description": "API for Goose Track application"
   },
@@ -228,10 +228,7 @@
             }
           },
           "400": {
-            "description": "The string parameters are invalid"
-          },
-          "404": {
-            "description": "Not found"
+            "description": "Invalid file's format or size"
           },
           "500": {
             "description": "Internal server error"
@@ -311,42 +308,6 @@
       }
     },
     "/api/tasks/{id}": {
-      "get": {
-        "tags": ["Tasks"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "type": "string",
-            "description": "The ID of the task to retrieve"
-          }
-        ],
-        "summary": "Retrieve a single task",
-        "security": [{ "Bearer": [] }],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Task"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Task not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
       "delete": {
         "tags": ["Tasks"],
         "summary": "Delete a task by ID",
@@ -395,7 +356,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Task"
+                "$ref": "#/components/schemas/UpdateTask"
               }
             }
           }
@@ -789,9 +750,59 @@
           }
         }
       },
+      "UpdateTask": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "The title of the task",
+            "example": "Buy groceries",
+            "required": true
+          },
+          "status": {
+            "type": "string",
+            "description": "The status of the task",
+            "example": "toDo",
+            "enum": ["toDo", "inProgress", "done"],
+            "default": "toDo"
+          },
+          "priority": {
+            "type": "string",
+            "description": "The priority of the task",
+            "example": "low",
+            "enum": ["low", "medium", "high"],
+            "default": "low"
+          },
+          "date": {
+            "type": "object",
+            "description": "The start and end date of the task",
+            "properties": {
+              "start": {
+                "type": "string",
+                "format": "date-time",
+                "description": "The start date of the task",
+                "example": "2023-04-26T00:00:00Z",
+                "required": true
+              },
+              "end": {
+                "type": "string",
+                "format": "date-time",
+                "description": "The end date of the task",
+                "example": "2023-04-27T00:00:00Z",
+                "required": true
+              }
+            }
+          }
+        }
+      },
       "Review": {
         "type": "object",
         "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Unique user ID",
+            "example": "64497f45555522a6cae4e577"
+          },
           "name": {
             "type": "string",
             "description": "The name of the reviewer",
